Updated margin to fix leaderboard image alignment

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -51,7 +51,7 @@ nav ul li {
     font-size: 4em;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     color: #FFF;
-    margin: 0;
+    margin: 0px 0px 0px 40px !important;
     line-height: 1;
     text-shadow: 1px 1px 1px #000;
     opacity: 0.6;
